--- a/styles.css
+++ b/styles.css
@@ -679,6 +679,7 @@ th, td {
 .card-image {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     
 }
 
@@ -770,13 +771,26 @@ th, td {
         grid-column: span 2;
         grid-row-start: 2;
         align-items:flex-start;
+        scroll-snap-type: x mandatory;
+        flex-direction: row;
+        overflow-x: auto;       /* Allow horizontal scrolling */
+        overflow-y: hidden;     /* Prevent vertical scrolling */
+        scroll-padding-left: 3rem;
         
+    }
+
+    .carousel > * {
+        padding-left: 1rem;
+        scroll-snap-align: start;
     }
 
     .landing-animation {
         display:none;
     }
 
+    .landing-grid {
+        padding-top:4rem;
+    }
 }
 
 
@@ -787,9 +801,14 @@ th, td {
         --root-font-size: 0.9rem;  /* Adjust the value as needed */
     }
 
+
     .card-image-container {
         width: 100%;
-        height: 100%;
+        height: 300px;
+    }
+
+    .card-image {
+        transform:Scale(1)
     }
 
     .card-description {
