--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,7 @@ This is where the section for the articles begins, and provides the formatting f
     gap: 0.25rem;
 }
 
+
 .article-font {
     color: #FFF;
     font-family: Inter;
@@ -832,3 +833,30 @@ th, td {
         padding-top:4rem;
     }
 }
+
+
+
+/* Scrollbar for Carousel optics, going to test accessibility */
+
+.hidden-scrollbar {
+    /* This will hide the scrollbar in all browsers */
+    
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  
+    /* Hide scrollbar for IE, Edge, and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
+  /* For Firefox */
+  .hidden-scrollbar {
+    scrollbar-width: none;
+  }
+  
+  /* For Internet Explorer and Edge */
+  .hidden-scrollbar {
+    -ms-overflow-style: none;
+  }
