--- a/styles.css
+++ b/styles.css
@@ -653,6 +653,7 @@ th, td {
     align-items:center;
     gap: 2rem;
     padding-bottom: 4rem;
+    padding-right:4rem;
 }
 
 .case-card {
@@ -663,15 +664,15 @@ th, td {
     border: 0.125rem solid #ddd;
     border-radius: 0.5rem;
     padding: 1rem; /* Adjust based on your needs */
-    width: min-content;
+    width:100%;
 }
 
 /* Trying to square out the image  */
 
 .card-image-container {
     grid-column: 1 / span 2;
-    width: 450px;
-    height: 450px;
+    width: 100%;
+    height: min-content;
     border: 0.125rem solid #ddd;
     position: relative; /* for absolute positioning of the image */
     overflow: hidden; /* to clip any part of the image that goes outside the container bounds */
@@ -699,13 +700,14 @@ th, td {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     width: min-content;
-    white-space: nowrap;
+
+    width:100%;
 }
 
 .category-tag {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4x1 layout */
     gap: 0.5rem;
-    grid-column: span 2;
     margin-bottom: 0.5rem;
     width: min-content;
     white-space: nowrap;
@@ -750,6 +752,7 @@ th, td {
     font-size: var(--regular-font-size);
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+    height: 2rem;
 }
 
 
@@ -764,6 +767,10 @@ th, td {
     .sticky-fix {
         grid-column:span 2;
         padding-inline: 3rem;
+    }
+
+        .card-description {
+        max-width:fit-content;
     }
 
     .carousel {
@@ -785,6 +792,7 @@ th, td {
         scroll-snap-align: start;
     }
 
+
     .landing-animation {
         display:none;
     }
@@ -802,15 +810,15 @@ th, td {
         --root-font-size: 0.9rem;  /* Adjust the value as needed */
     }
 
+    .category-tag {
+        width:fit-content;
+    }
 
     .card-image-container {
         width: 100%;
         height: 300px;
     }
 
-    .card-image {
-        transform:Scale(1)
-    }
 
     .card-description {
         max-width:fit-content;
@@ -832,6 +840,20 @@ th, td {
     .landing-grid {
         padding-top:4rem;
     }
+}
+
+@media (max-width: 600px) {
+    .category-tag {
+        grid-template-columns: repeat(2, 1fr); /* 2x2 layout */
+        padding-top:0.5rem;
+        padding-bottom:0.5rem;
+    }
+
+    .card-description {
+        height:4rem;
+    }
+
+
 }
 
 
