--- a/styles.css
+++ b/styles.css
@@ -542,6 +542,12 @@ th, td {
     transform: rotate(-90deg); /* This will start our stroke at the top of the circle */
 }
 
+.gradient {
+    /* The gradient is now larger and extends beyond the boundaries of the element. */
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 70%);
+    /* Make sure the content inside does not overflow and show the square edges */
+    overflow: hidden;
+  }
 
 .article-image {
     width: 100%;
@@ -594,7 +600,8 @@ th, td {
   
 .carousel-item {
     flex: 0 0 auto;
-    width: calc(100% - 40px); /* This will set the width of each item to be slightly less than 100% of the container */
+    width: calc(100% - 5vw); /* Responsive width calculation */
+    min-width: 300px;
     padding: 10px 20px; /* This provides spacing between items */
     box-sizing: border-box;
     margin-right: 20px; /* This provides some space between each card */
@@ -608,10 +615,10 @@ th, td {
 
 
   .carousel-image {
-    width: 100%;
-    height: auto;
+    min-width: 400px;
+    height: auto; /* This will maintain the aspect ratio of the image */
     display: block;
-  }
+}
 
 /* Trying to efficiently rebuild the home page before adding in animations */
 
@@ -818,6 +825,11 @@ th, td {
     .landing-grid {
         padding-top:4rem;
     }
+
+    .carousel-item:hover {
+        transform: scale(1.3); /* This enlarges the item slightly when hovered */
+        z-index: 1; /* This ensures the hovered item is above the rest */
+      }
 }
 
 
