Need to fix the case cards scaling
I might need to just rebuild this whole carousel to make it a bit easier to work with.

--- a/styles.css
+++ b/styles.css
@@ -830,6 +830,12 @@ th, td {
         transform: scale(1.3); /* This enlarges the item slightly when hovered */
         z-index: 1; /* This ensures the hovered item is above the rest */
       }
+
+    .card-image-container {
+        height:100%;
+       
+    }
+
 }
 
 
@@ -852,6 +858,7 @@ th, td {
 
     .card-description {
         max-width:fit-content;
+        height:4rem;
     }
 
     .carousel {
